# django-signal-webhooks

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: index.md  setup.md
docs/css/: docs.css
search/: search_index.json
setup/: index.html
signal_webhooks/: __init__.py  admin.py  apps.py  exceptions.py  fields.py  handlers.py  models.py  serializers.py  settings.py  typing.py  utils.py
signal_webhooks/api/: serializers.py  views.py
signal_webhooks/migrations/: 0001_initial.py  0002_change_auth_token_and_last_response_max_length.py  0003_alter_webhook_endpoint_alter_webhook_name_and_more.py  0004_migrate_signal_choices.py
tests/: conftest.py  test_admin.py  test_api.py  test_hooks.py  test_local.py  test_utils.py
tests/django/: asgi.py  settings.py  testdb  urls.py
tests/my_app/: apps.py  models.py
tests/my_app/migrations/: 0001_initial.py
tests/project/: settings.py  testdb  urls.py
